src/css-components/Qualifications.module.css
.qualifications {
    font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
    height: 100vh;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    margin-bottom: 200px;
    border-bottom: solid red 5px;
    padding-top: 105px;
    box-sizing: border-box;
    padding-bottom: 6vh;
}

.mainHeading {
    font-size: calc(5vh + 2.5vw);
}

.timelineContainer {
    height: 60vh;
    /* border:solid red 4px; */
    width: 100vw;
}

.timelineList {
    display: flex;
    list-style-type: none;
    /* padding-left: 0; */
    height: 100%;


}

/********* GENERAL STYLING WILL DO AT END ********/
.horizontalStyling {
    border: solid black 2px;
}

.sampleImageStyling {
    height: 25px;
    width: 25px;
    border-radius: 50%;
    background-color: black;
}

/********* FIRST LIST ITEM STUFF ONLY ************/
.firstListItem {
    display: grid;
    grid-template-columns: auto 1fr;
    grid-template-rows: 1fr auto 1fr;
    width: fit-content;
    justify-items: start;
    gap: 0;
}

.firstListItem .sampleImage {
    grid-column: 1;
    grid-row: 2;
}

.firstHorizontalLine {
    grid-column: 2;
    grid-row: 2;
    width: 100%;
    align-self: center;
}

.firstListItem .timelineContent {
    grid-column: 1 / span 2;
    grid-row: 1;
}


/******************** GENERAL LIST ITEMS ********************/

.listItem {
    display: grid;
    grid-template-columns: auto auto 1fr;
    grid-template-rows: 1fr auto 1fr;
    width: fit-content;
    justify-items: start;
    gap: 0;
}

.beforeHrLine {
    grid-column: 1;
    grid-row: 2;
    width: 50px; /************* INCREASE THIS TO INCREASE SPACING BETWEEN TIMELINE *********/
    align-self: center;
}

.afterHrLine {
    grid-column: 3;
    grid-row: 2;
    width: 100%;
    align-self: center;
}

.sampleImage {
    grid-column: 2;
    grid-row: 2;
}

.timelineContent {
    grid-column: 2 / span 2;
}

/************ ODD AND EVEN DIFFERENCES *************/

.evenItem .timelineContent{
    grid-row: 3;
    padding-top: 3vh;
}

.oddItem .timelineContent {
    padding-bottom: 3vh;
    align-self: end;
}

